--- a/hello.html
+++ b/hello.html
@@ -3,5 +3,18 @@
   <head>
       <title>My webpage</title>
     </<head>
-  <body> Hello World ! Hey</body>
+  <body>
+    An unordered list
+    <ul>
+      <li>One Item</li>
+      <li>Another Item</li>
+      <li>Yet Another Item</li>
+    </ul>
+    An ordered list
+    <ol>
+      <li>One Item</li>
+      <li>Another Item</li>
+      <li>Yet Another Item</li>
+    </ol>
+  </body>
 </html>
